force-app/main/default/objects/spares__c/spares__c.object-meta.xml
<CustomObject>
    <label>Spare Product</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Spares Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spare Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>