force-app/main/default/objects/spares__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cases</label>
    <referenceTo>Cases__c</referenceTo>
    <relationshipName>Spares_And_Machinery_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>