force-app/main/default/objects/spares__c/fields/M_s_Quantity__c.field-meta.xml
<CustomField>
    <fullName>M_s_Quantity__c</fullName>
    <label>M s Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>