force-app/main/default/objects/spares__c/fields/Machine_No__c.field-meta.xml
<CustomField>
    <fullName>Machine_No__c</fullName>
    <formula>Cases__r.Machine_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine No.</label>
    <type>Text</type>
</CustomField>