force-app/main/default/objects/spares__c/fields/Required_On_or_Before__c.field-meta.xml
<CustomField>
    <fullName>Required_On_or_Before__c</fullName>
    <defaultValue>(Today() + 10)</defaultValue>
    <label>Required On or Before</label>
    <type>Date</type>
</CustomField>