force-app/main/default/objects/spares__c/fields/RS_SET__c.field-meta.xml
<CustomField>
    <fullName>RS_SET__c</fullName>
    <formula>Std_Qty__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS/SET</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>