force-app/main/default/objects/spares__c/fields/SpareDescriptionofMaterial__c.field-meta.xml
<CustomField>
    <fullName>SpareDescriptionofMaterial__c</fullName>
    <label>Spare Description of Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>