force-app/main/default/objects/spares__c/fields/SpareLineItem__c.field-meta.xml
<CustomField>
    <fullName>SpareLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SpareLineItem</label>
    <referenceTo>SpareLineItem__c</referenceTo>
    <relationshipName>Spares_And_Machinery_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>