force-app/main/default/objects/spares__c/fields/Spares_And_Machinery_Parts__c.field-meta.xml
<CustomField>
    <fullName>Spares_And_Machinery_Parts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spares And Machinery Parts</label>
    <referenceTo>spares__c</referenceTo>
    <relationshipName>Spares_And_Machinery_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>