force-app/main/default/objects/spares__c/fields/Std_Qty__c.field-meta.xml
<CustomField>
    <fullName>Std_Qty__c</fullName>
    <label>Std Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>