force-app/main/default/objects/spares__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MC_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>SpareDescriptionofMaterial__c</columns>
    <columns>Size__c</columns>
    <columns>Price__c</columns>
    <columns>Diagram__c</columns>
    <columns>RS_SET__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>