force-app/main/default/objects/spares__c/listViews/Recent.listView-meta.xml
<ListView>
    <fullName>Recent</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Recent</label>
</ListView>